<resources>
    <string name="facebook_app_id">1320860347951584</string>
    <string name="app_name">FindBerry</string>
    <string name="etuser">Usuario</string>
    <string name="etpass">Contraseña</string>
    <string name="blogin">Ingresar</string>
    <string name="tvregister">Resgistrarse</string>
    <string name="bregister">Resgistrarse</string>
    <string name="bcancel">Cancelar</string>
    <string name="etpassr">Reescribir contraseña</string>
    <string name="etmail">Correo</string>
    <string name="tLogEmpty">¡Por favor llena todos los espacios en blanco!</string>
    <string name="tLogWrongPass">¡Contraseña incorrecta!</string>
    <string name="tLogWrongUser">¡El usuario no existe!</string>
    <string name="tRegReg">¡Registrado exitosamente!</string>
    <string name="tRegPassNoMatch">¡Las contraseñas no coinciden!</string>
    <string name="miPerfi">Perfil</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="maps">Mapas</string>
    <string name="deliv">Delivery</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main_t">MainTActivity</string>
    <string name="action_settings">Settings</string>
    <string name="quantity">Cantidad</string>
    <string name="foodmenu">Alimentación</string>
    <string name="acadmenu">Académicos</string>
    <string name="ociomenu">Ocio</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="loginerror">Error en el Ingreso</string>
    <string name="loginsuccess">Ingreso satisfactorio</string>
    <string name="logincancel">Ingreso cancelado</string>
    <string name="tvProduct">Producto</string>
    <string name="tvPrice">Precio</string>
    <string name="tvQuantity">Cantidad</string>
    <string name="tvTime">Hora</string>
    <string name="bConfirm">Confirmar pedido</string>
    <string name="event">Evento deseado</string>
    <string name="eventdesc">Descripción (Hora, fecha, tipo de evento, preferencias)</string>
    <string name="bConfirmEvent">Confirmar</string>
    <string name="tvPending">Pedidos</string>
    <string name="tvUser">Usuario</string>
    <string name="tvSeeP">Ver pedido</string>
    <string name="tvSide">Lugar</string>
    <string name="tvRoute">Recorrido</string>
    <string name="tvSeeR">Ver recorrido</string>
    <string name="bView">Ver</string>
    <string name="deliverer">Deliverer</string>
    <string name="status">Estado</string>
    <string name="Logout">Cerrar Sesión</string>
    <string name="fooddesc">Aquí podrás ver los restaurantes y cafés que más te gustan de la universidad.</string>
    <string name="acaddesc">Aquí podrás ver las papelerías con los artículos académicos que prefieras.</string>
    <string name="fundesc">Aquí podrás ver los lugares donde venden boletería para eventos y cine.</string>
    <string name="selectdesc">Aquí harás tus pedidos. Mantén presionado sobre cada opción para ver la información completa.</string>
    <string name="deliverydesc">Aquí podrás inscribirte para enviar pedidos y observar tu panel de Deliverer.</string>
    <string name="ordersdesc">Aquí podrás ver los pedidos que tienes actualmente.</string>
    <string name="mapdesc">Aquí podrás ver la ubicación de los locales de preferencia.</string>
    <string name="configdesc">Aquí podrás ver tu información de perfil y tu puntaje como usuario.</string>
    <string name="tvPriceside">Precio del domicilio:\u0020</string>
    <string name="hProddesc">Descripción adicional del prducto</string>
    <string name="hELocation">Tu ubicación exacta</string>
    <string name="bcancelr">Cancelar Pedido</string>
    <string name="myLoc">Mi ubicación</string>
    <string name="currentLoc">Ubicación actual</string>
    <string name="currentOrder">Actualmente tienes un pedido aquí.</string>
    <string name="cancelOrder">¿Está seguro que desea cancelar el pedido? Recuerda que esto podrá afectar tu puntaje de usuario.</string>
    <string name="userNoLoc">No se pudo obtener la ubicación del usuario.</string>
    <string name="notDeliv">Lo sentimos, aún no eres Deliverer, por lo tanto no puedes acceder a esta sección, sin embargo puedes serlo con sólo aceptar el mensaje al inicio de la aplicación, y automáticamente te generará un nombre ¿Qué esperas para ser Deliverer?</string>
    <string name="tyforDel">Gracias por ser Deliverer, ahora podrás ver los pedidos actuales y comenzar a ganar puntos por hacer entregas.</string>
    <string name="acccept">Aceptar pedido</string>
    <string name="finalize">Consolidar pedido</string>
    <string name="cancel">Cancelar</string>
    <string name="sendeval">Enviar evaluación</string>
    <string name="evalinfo">¡Gracias por utilizar FindBerry! ahora te solicitamos que por favor evalúes nuestro deliverer con el fin de prestarte un mejor servicio, esto sólo te tomará un click.</string>
    <string name="evalinfo2">¡Gracias por utilizar FindBerry! ahora te solicitamos que por favor evalúes el usuario con el fin de prestarte un mejor servicio, esto sólo te tomará un click.</string>
    <string name="topDeliv">Top Deliverers</string>
    <string name="topUsers">Top Users</string>
</resources>
