<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcolor"
    android:id="@+id/fOrders"
    tools:context="com.example.david.findberry.OrdersFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/backcolor">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/titlestyle"
                android:layout_weight="2"
                android:text="@string/status" />

            <TextView style="@style/titlestyle"
                android:layout_weight="2"
                android:text="@string/deliverer" />

            <TextView style="@style/titlestyle"
                android:layout_weight="2"
                android:text="@string/tvSide" />

            <TextView style="@style/titlestyle"
                android:layout_weight="2"
                android:text="@string/tvPrice" />

            <TextView style="@style/titlestyle"
                android:layout_weight="2"
                android:text="@string/tvTime" />

        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/foRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:scrollbars="vertical" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView style="@style/titlestyle"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/tvProduct"
                android:id="@+id/tvtpr"
                android:visibility="gone"/>

            <TextView style="@style/titlestyle"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/tvPrice"
                android:id="@+id/tvtp"
                android:visibility="gone" />

            <TextView style="@style/titlestyle"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/tvQuantity"
                android:id="@+id/tvtQ"
                android:visibility="gone"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/foRecycler2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:scrollbars="vertical"
            android:visibility="gone"/>

        <Button style="@style/bLog"
            android:text="@string/bcancelr"
            android:id="@+id/bCancel"
            android:visibility="gone"/>

    </LinearLayout>

</FrameLayout>
