<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backcolor"
    tools:context="com.example.david.findberry.EventActivity">

    <ImageView
        android:id="@+id/eaImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/arbo"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEvent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:hint="@string/event"/>

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eventdesc"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/etQuantityEv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:inputType="number"
            android:textAlignment="center" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/bConfirm"
        android:layout_height="wrap_content"
        android:text="@string/bConfirmEvent"
        android:layout_gravity="center"/>

</LinearLayout>
