<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fDelivery"
    tools:context="com.example.david.findberry.DeliveryFragment"
    android:background="@color/backcolor">

    <TextView style="@style/titlestyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/notDeliv"
        android:id="@+id/delivInfo"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fdScroll">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/pr"
                    android:id="@+id/ivPhoto"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dnameid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:text="Deliverer 1"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/h1"
                            android:src="@drawable/ic_favorite_black_24dp"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/h2"
                            android:src="@drawable/ic_favorite_black_24dp"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/h3"
                            android:src="@drawable/ic_favorite_black_24dp"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/h4"
                            android:src="@drawable/ic_favorite_black_24dp"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/h5"
                            android:src="@drawable/ic_favorite_black_24dp"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView style="@style/titlestyle"
                    android:layout_weight="1"
                    android:text="@string/tvPending" />

                <TextView style="@style/titlestyle"
                    android:layout_weight="1"
                    android:text="@string/tvUser" />


                <TextView style="@style/titlestyle"
                    android:layout_weight="1"
                    android:text="@string/tvTime" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fdRecycler">

            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView style="@style/cellstyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sideDesc"/>
                <TextView style="@style/cellstyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reqDesc"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llTitle"
                android:visibility="gone">


                <TextView style="@style/titlestyle"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/tvProduct"/>

                <TextView style="@style/titlestyle"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPrice"/>

                <TextView style="@style/titlestyle"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/tvQuantity"/>

            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fdRecycler2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bAccept"
                android:text="@string/acccept"
                android:visibility="gone"/>


        </LinearLayout>


    </ScrollView>

</FrameLayout>
